Avoid weird paragraph spacing (#30)
Dependent on the width, the hidden bookmark would still consume screen real estate if it would break to a new line as the only word.

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -212,12 +212,12 @@ main a:hover code, main a:focus code {
   background-color: inherit;
 }
 a.bookmark {
-  visibility: hidden;
+  display: none;
 }
 h2:hover a.bookmark,
 h3:hover a.bookmark,
 h4:hover a.bookmark {
-  visibility: visible;
+  display: inline;
 }
 figure {
   margin: 0 0 1em;
